--- a/index.html
+++ b/index.html
@@ -281,9 +281,8 @@
     </script>
 </head>
 
-<body>
+<body onload="getDeviceDetails()">
     <section>
-        <button onclick="getDeviceDetails()">Click to capture your device details</button>
         <p id="demo"></p>
         <p>
             <label>Device: </label>
