add radio button logic

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   const unknownModel = modelInfo.message === "undetermined";
                   // An unknown model could be 6, 6s, 7, or 8, but we know it's above 6 if the OS is upgraded. 
                     if (unknownModel && !currentModel) { 
-                      messageNode.innerHTML = "Select your iPhone model: ";
+                      messageNode.style.display = "";
                       iOSDownloadNode.style.display = "none";
                       iOSModelSelection.style.display = "block";
                     } else if (unknownModel && currentModel) {
@@ -292,17 +292,29 @@
                 iOSModelSelection.style.display = "none";
             }
         }
+
+        function showHide (id) {
+            if (id === "current") {
+                document.getElementById("message").innerHTML = "PoC-iOS New Device Message to upgrade. FPO"
+                document.getElementById("iOS-download").style.display = "inline"; 
+                document.getElementById("iOS-download").innerHTML = "Download Walmart";    
+            } else {
+                document.getElementById("message").innerHTML  = "PoC- iOS Old Device Message.FPO";
+                document.getElementById("iOS-download").style.display = "none";
+            }
+        }
     </script>
 </head>
 
 <body onload="getDeviceDetails()">
-    <p id="message"></p>
     <section id="model-selection">
-      <input type="radio" id="current" name="model" value="6sPlus">
+    <p>Pleas select your iPhone model: </p>
+      <input type="radio" id="current" name="model" value="6sPlus" onclick="showHide(id)">
         <label for="6sPlus">iPhone 6+/iPhone 7 or newer</label><br>
-      <input type="radio" id="obsolete" name="model" value="LessThan6">
+      <input type="radio" id="obsolete" name="model" value="LessThan6" onclick="showHide(id)">
         <label for="LessThan6">Older than iPhone 6+/iPhone 7</label><br>
     </section>
+    <p id="message"></p>
     <section> 
         <div>
             <a
