fix download link not displaying for unknown iOS

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
         function showHide (id) {
             if (id === "current") {
                 document.getElementById("message").innerHTML = "PoC-iOS New Device Message to upgrade. FPO"
+                document.getElementById("download").style.display = "block";
                 document.getElementById("download-iOS").style.display = "inline";
                 document.getElementById("download-iOS").innerHTML = "Download Walmart";
             } else {
